# av_sync_rtsp_server

./: CMakeLists.txt  README.md
include/: alsa_capture.h  alsa_pcm_framed_source.h  alsa_pcm_media_subsession.h  constants.h  unified_rtsp_server_manager.h  v4l2_h264_framed_source.h
src/: alsa_capture.cpp  alsa_pcm_framed_source.cpp  alsa_pcm_media_subsession.cpp  main.cpp  unified_rtsp_server_manager.cpp  v4l2_capture.cpp  v4l2_h264_framed_source.cpp  v4l2_h264_media_subsession.cpp
